fix: improve visibility of Blog page in dark mode (#1359)

--- a/blog/src/css/customTheme.scss
+++ b/blog/src/css/customTheme.scss
@@ -35,6 +35,7 @@
 }
 
 html[data-theme="dark"] {
+  --ifm-color-primary: #db433e;
   --color-secondary-bg: #121212;
   --ifm-color-dark: #b0b0b0;
   --color-title: #f0f0f0;
@@ -141,7 +142,7 @@ div.inner {
 }
 
 header h2 {
-  color: var(--color-primary);
+  color: var(--color-title);
 }
 
 @media only screen and (max-width: 414px) {
@@ -233,7 +234,7 @@ a {
 }
 
 a:hover {
-  color: var(--color-primary);
+  color: var(--ifm-color-dark);
   text-decoration: none;
 }
 
