--- a/blog/src/theme/BlogLayout/style.module.scss
+++ b/blog/src/theme/BlogLayout/style.module.scss
@@ -27,9 +27,13 @@
   width: 100%;
   flex-wrap: wrap;
   padding: 0.25rem 1rem;
-  transition: all 0.3s ease-in-out;
-  border-bottom: 1px solid #e8e8ed;
+  transition: color 0.3s ease-in-out;
   font-family: apple-system, system-ui, sans-serif;
+  border-bottom: 1px solid #e8e8ed;
+
+  html[data-theme="dark"] & {
+    border-bottom: 1px solid #252525;
+  }
 
   &::before {
     content: "";
@@ -38,6 +42,7 @@
     z-index: -1;
     position: absolute;
     top: 0;
+    left: 0;
     backdrop-filter: blur(12px);
   }
 
@@ -47,9 +52,14 @@
     font-weight: 400;
     font-size: 14px;
     transition: inherit;
+    color: var(--color-title);
 
     &:default {
       color: #1d1d1f;
+    }
+
+    &:hover {
+      color: var(--ifm-color-primary);
     }
   }
 
@@ -59,6 +69,10 @@
 
     &::before {
       background-color: hsl(100deg 100% 100% / 85%);
+
+      html[data-theme="dark"] & {
+        background-color: hsl(0deg 0% 0% / 85%);
+      }
     }
 
     > a {
